<resources>
    <string name="app_name">Enlazar</string>
    <string name="title_card_proximo_servicio">Próximo Servicio</string>
    <string name="title_card_mis_servicios">Mis Servicios</string>
    <string name="title_card_mis_puntos">Mis puntos</string>
    <string name="title_card_mis_encuentros">Mis encuentros</string>
    <string name="title_card_seccic_n_informativa">Información</string>
    <string name="subTitle_seccion_informativa">¡Aprende todo sobre reciclaje!</string>
    <string name="subtitle_proximo_encuentro">Proximo encuentro</string>
    <string name="subtitle__mis_puntos">190 Puntos</string>
    <string name="subtitle_mis_servicios">14 bolsas recicladas</string>
    <string name="subtitle_proximos_servicio">Sábado 29 de mayo, Turno: mañana</string>
    <string name="email">Ingrese su Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="no_tenes_cuenta">No tenes cuenta ?</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="Calle">Calle</string>
    <string name="numero_de_calle">Dirección (Calle y Número), se lo más preciso posible</string>
    <string name="Localidad">Localidad</string>
    <string name="Telefono">Teléfono</string>
    <string name="registrarme">registrar</string>
    <string name="inicio">Inicio</string>
    <string name="mis_direcciones">Mis direcciones</string>
    <string name="mis_canjes">Mis canjes</string>
    <string name="invita_a_amigos">Invita a amigos</string>
    <string name="guardado">Guardado</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="card_resumen">breve resumen de la composicion de la card</string>
    <string name="ver">ver detalle</string>
    <string name="tipo_de_info">tipo De Info</string>
    <string name="donde_estas">Donde Estás</string>
    <string name="direccion">Dirección</string>
    <string name="material">Material</string>
    <string name="envases_plastico">Envases Plástico</string>
    <string name="ejemplo_tipo1">Envases Plastico<br />Latas<br />Bricks</string>
    <string name="ejemplo_tipo2">Papel y Cartón<br />Diarios o revistas<br />Envases de cartón</string>
    <string name="latas">Latas</string>
    <string name="bricks">Bricks</string>
    <string name="cant_bolsas">Cantidad de Bolsas</string>
    <string name="envases_de_vidrios">Envases de Vidrios</string>
    <string name="papel_y_cart_n">Papel y Cartón</string>
    <string name="diarios_o_revistas">Diarios o revistas</string>
    <string name="envases_de_cart_n">Envases de cartón</string>
    <string name="coordinar">Coordinar</string>
    <string name="horario">Seleccione un Horario</string>
    <string name="d_a">día</string>
    <string name="succes">Cambio efectuado correctamente</string>
    <string name="error">A ocurrido un error </string>
    <string name="finalizar">Finalizar</string>
    <string name="Ejemplo_cant_puntos">190</string>
    <string name="puntos_acumulados">Puntos Acumulados</string>
    <string name="historial_de_cupones">Mis Cupones</string>
    <string name="canjear_puntos">Canjear Puntos</string>
    <string name="nuevo_servicio">Nuevo Servicio</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="search_call_error">Hubo un error en la búqueda</string>
    <string name="google_api_key2">AIzaSyD63Ptld6R6m6o8p3HkX9an3ksAw_faFBs</string>
    <string name="ingrese_la_calle">Ingrese la calle</string>
    <string name="place_not_found">Lugar no Encontrado</string>
    <string name="Dni">Ingrese su DNI</string>
    <string name="Partido">Partido</string>
    <string name="selecciona_el_d_a">Selecciona el día</string>
    <string name="prefs_file">datosSession</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="iniciar_servicio">Iniciar Servicio</string>
    <string name="finalizar_servicio">Finalizar Servicio</string>
    <string name="comentarios_sobre_el_servicio">Comentarios sobre el servicio</string>

    <string name="user_login">USERLOGIN</string>

    <string name="pendientes">Pendientes</string>
    <string name="confirmados">Confirmados</string>
    <string name="places_cancelar">Cancelar servicio</string>
    <string name="valor_perdido">Se ha perdido la respuesta</string>
    <string name="como_reciclar">Como Reciclar Bien</string>
    <string name="consejo_semana">Consejo de la semana</string>
    <string name="eco_info">Ecoinforme</string>
    <string name="cantidad_disponibles">Unidades Disponibles </string>
    <string name="costo_puntos_cupon">Puntos de costo: </string>

    <string name="canjear">canjear</string>

    <string name="seleccione_el_servicio_a_realizar">Seleccione el servicio a realizar</string>
    <string name="cancelar_servicio">CANCELAR SERVICIO</string>
    <string name="confirmar_asistecia_P_E">CONFIRMAR ASISTENCIA</string>
    <string name="cancelar_asistencia_P_E">CANCELAR ASISTENCIA</string>
    <string name="no_hay_valor_a_capturar">no hay valor a capturar</string>
    <string name="no_se_encotraron_los_tipo_de_servicios_solicitados">No se encontraron <br />los tipos de <br/>Servicios solicitados</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="direcci_n">Dirección</string>
    <string name="papel_cart_n_diarios_envases_carton">Papel, cartón, diarios</string>
    <string name="envases_pl_sticos_latas_bricks">Envases plásticos, latas, bricks</string>
    <string name="estado_cupon">Estado:</string>
    <string name="hubo_un_error_en_la_respuesta"> Error en<br/> la respuesta</string>
    <string name="mis_canjes_realizados">Mis canjes realizados</string>
    <string name="no_tienes_servicios_asignados">No tienes servicios asignados</string>
    <string name="no_tienes_servicios_finalizados">No tienes servicios finalizados</string>



</resources>